# ifome-public

./: .env.example  .env.local.example  .gitignore  MANIFEST.in  README.md  public_sync_manifest.txt  pyproject.toml
apps/: __init__.py
apps/web/: README.md  __init__.py  package-lock.json  package.json
core/: __init__.py  cli.py
core/chat/: __init__.py  rag.py
docs/: account_setup.md  architecture.md  future_roadmap.md  input_chat_card_update_summary.md  job_agent_engineering_doc.md  job_agent_whitepaper.md  memory_design.md  next_execution_plan.md  prd.md  public_showcase.md  readiness_gap.md  reminder_design.md  repo_structure.md  user_guide.md
integrations/: README.md
prompts/: README.md  chat_attachment_summary.md  chat_preprocess.md  chat_query_rewrite.md  chat_rag.md  chat_session_summary.md  classify.md  deduplicate.md  extract.md  intake_standardize.md  interview_prep.md  job_card_relationship.md  job_title_assessment.md  market_watch_overview.md  market_watch_summarize.md  market_watch_title_rank.md  memory_write_gate.md  project_structure.md  rank.md  resume_projects_to_memory.md  resume_structure.md  summarize.md
scripts/: market_watch_recent_titles.py  probe_jiqizhixin_sources.py
tests/: README.md  test_cli.py  test_gateway_timeouts.py  test_live_llm_integration.py  test_memory.py  test_ocr_routing.py  test_phase11_inputs.py  test_phase12_persistence.py  test_phase13_boss_zhipin.py  test_phase14_rag_chat.py  test_phase15_card_management.py  test_recent_site_titles.py  test_reminders.py  test_schemas.py  test_web_page_client.py  test_workflow.py
(+79 files in other folders)
